--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,7 +22,7 @@ jobs:
       - name: Configure AWS credentials using OIDC
         uses: aws-actions/configure-aws-credentials@v4
         with:
-          role-to-assume: arn:aws:iam::540095405023:oidc-provider/token.actions.githubusercontent.com
+          role-to-assume: arn:aws:iam::540095405023:role/GitHubActionsOIDCRole
           aws-region: us-east-2
 
       - name: Run AWS CLI
