--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,6 +25,9 @@ jobs:
           role-to-assume: arn:aws:iam::540095405023:role/GitHubActionsOIDCRole
           aws-region: us-east-2
 
+      - name: Verify identity
+        run: aws sts get-caller-identity
+
       - name: Zip the Lambda function
         run: zip oidc_test_function.zip lambda_function.py
 
